--- a/BASKET/index.html
+++ b/BASKET/index.html
@@ -154,7 +154,7 @@
     <div class="bg-dark goods page__goods">
       <p class="goods__title"> Каталог </p>
       <p class="budget page__budget">
-        Бюджет: &#x20BD; <span class="budget__budget-value"> </span>
+        Бюджет:  <span class="budget__budget-value"> </span> &#x20BD;
       </p>
       <p class="line"></p>
       <div id="good-1" class="bg-light text-dark good goods__good" draggable="true">
